Spacing fix

--- a/src/client/components/Question.scss
+++ b/src/client/components/Question.scss
@@ -32,7 +32,7 @@
   flex-wrap: wrap;
 
   @include media-breakpoint-down(sm) {
-    margin: 1.5 * $spacing-base (-$spacing-base * 0.5) (-$spacing-base * 0.5);
+    margin: -$spacing-base * 0.5;
   }
 }
 
